# TicketTriage-LoRA

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: README.md  app.py  requirements.txt
app/static/: README.md  index.html
data/: test.jsonl  train.jsonl  val.jsonl
results/: eval_report.md  eval_results.json
scripts/: deploy_space.py  export_gguf.py  local_supervisor.ps1  prepare_data.py  run_eval.py  runpod_run.sh  train.py
src/tickettriage/: api.py  inference.py  priority.py  prompts.py  schema.py
src/tickettriage/eval/: capability.py  classification.py  costs.py  judge.py  mmlu_lite.json  reply_metrics.py  report.py
tests/: test_api.py  test_capability.py  test_classification_metrics.py  test_data_prep.py  test_judge.py  test_priority.py  test_prompts.py  test_reply_metrics.py  test_report.py
