[project]
name = "tickettriage"
version = "0.1.0"
description = "TicketTriage-LoRA: QLoRA fine-tuned LLM for support ticket classification + response drafting, with a rigorous before/after eval"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "huggingface_hub>=0.23",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "httpx>=0.27",
]
eval = [
    "anthropic>=0.116",
    "httpx>=0.27",
]
demo = [
    "gradio>=4.40",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "fastapi>=0.111",
    "httpx>=0.27",
    "anthropic>=0.116",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
